# csv-obfuscator

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  README.rst  build_obfuscate.bat  config_example.json  main.py  obfuscate.bat  obfuscate.py  pyproject.toml  run_obfuscate.bat
csv_obfuscator/: __init__.py
csv_obfuscator/loader/: __init__.py
csv_obfuscator/strategy/: combination.py  date.py  email.py  factory.py  float.py  integer.py  md5.py  md5_strategy.py  names.py  percentage.py  phone_number.py  social_security.py
csv_obfuscator/utility/: __init__.py
examples/: simple.csv
tests/: test_config_loader.py  test_csv_obfuscator.py  test_csv_processor.py  test_load.py  test_obfuscate.py  test_process.py  test_process_csv.py
tests/loader/: test_config_loader.py
tests/strategy/: test_combination.py  test_date.py  test_email.py  test_first_names.py  test_float.py  test_full_name.py  test_integer.py  test_last_names.py  test_md5.py  test_md5_hash.py  test_percentage.py  test_phone_number.py  test_social_security.py  test_strategy_factory.py
winpython/scripts/: WinPython_PS_Prompt.ps1  env.bat  pip.bat
