[tool.poetry]
name = "csv-obfuscator"
version = "0.1.0"
description = ""
authors = ["ajmartin <adam_martin@pediatrix.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
bandit = "^1.7.4"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
pycodestyle = "^2.8.0"
pylint = "^2.13.8"
coverage = "^6.3.2"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
flake8-html = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
